# limits-usage-aggregator

./: .bash_aliases  .bazelrc  BUILD  CLAUDE.md  Dockerfile  MODULE.bazel  Makefile
.claude/: settings.json
.claude/hooks/: allow-docker-run.sh
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/aggregation/: aggregation_core.hpp.func-sort-c.html  aggregation_core.hpp.func.html  aggregation_core.hpp.gcov.html  aggregation_traits.hpp.func-sort-c.html  aggregation_traits.hpp.func.html  aggregation_traits.hpp.gcov.html  grouping.hpp.func-sort-c.html  grouping.hpp.func.html  grouping.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  key_extractors.hpp.func-sort-c.html  key_extractors.hpp.func.html  key_extractors.hpp.gcov.html  order_stage.hpp.func-sort-c.html  order_stage.hpp.func.html  order_stage.hpp.gcov.html  staged_metric.hpp.func-sort-c.html  staged_metric.hpp.func.html  staged_metric.hpp.gcov.html
coverage/engine/: generic_aggregation_engine.hpp.func-sort-c.html  index-sort-f.html  (+19 more)
src/: BUILD
tests/: BUILD  BUILD.bazel  aggregation_tests.cpp  fix_message_tests.cpp  integration_test_gross_notional.cpp  integration_test_notional_drift.cpp  integration_test_option_underlyer_count.cpp  integration_test_option_underlyer_refactored.cpp  integration_test_options_gross_net_check.cpp  integration_test_order_count_by_instrument_side.cpp  integration_test_portfolio_instrument_notional.cpp  integration_test_pre_trade_check_updates.cpp  integration_test_vega_delta_combined.cpp  integration_tests.cpp  test_framework.hpp  test_runner.cpp
(+108 files in other folders)
