load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "test_framework",
    hdrs = ["test_framework.hpp"],
)

# These files are #included by test_runner.cpp (unity build pattern)
cc_library(
    name = "test_sources",
    textual_hdrs = [
        "aggregation_tests.cpp",
        "fix_message_tests.cpp",
        "integration_tests.cpp",
    ],
    deps = [
        ":test_framework",
        "//src/aggregation",
        "//src/engine",
        "//src/fix",
        "//src/metrics",
    ],
)

cc_test(
    name = "test_runner",
    srcs = ["test_runner.cpp"],
    copts = ["-Itests"],
    deps = [
        ":test_sources",
    ],
)
